--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </p>
                 <div style="margin-top: 25px; padding: 20px; background: #1a1a1a; border-radius: 8px; border-left: 3px solid var(--accent);">
                     <ul style="font-size: 0.9rem; color: #bbb; line-height: 1.8;">
-                        <li>✔ DEJEPS Escalade en Milieu Naturel</li>
+                        <li>✔ DEJEPS Escalade en Milieux Naturels</li>
                         <li>✔ Carte Pro : <a href="https://recherche-educateur.sports.gouv.fr/CartePro/01422ED0045" target="_blank" class="legal-link">01422ED0045</a></li>
                     </ul>
                 </div>
@@ -431,7 +431,7 @@
             <div class="legal-col">
                 <h4>Info</h4>
                 <p><strong>Responsable :</strong> Hugo DA ROIT</p>
-                <p><strong>Hébergeur :</strong> (A compléter)</p>
+                <p><strong>Hébergeur :</strong> Cloudflare</p>
                 <p><strong>Données :</strong> Site sans cookies.</p>
             </div>
         </div>
