--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/png" href="/img/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/img/icons/favicon.svg" />
+    <link rel="shortcut icon" href="/img/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Hugo Da Roit" />
+    <link rel="manifest" href="/img/icons/site.webmanifest" />
+
     <title>Hugo Da Roit | Moniteur Escalade - De la Normandie aux Hautes-Alpes</title>
     <meta name="description" content="Moniteur d'escalade DEJEPS basé dans les Hautes-Alpes. J'organise des stages pour les grimpeurs Normands et d'ailleurs. : Clécy, Les Andelys, La Fosse Arthour, Mortain, Presles, Gorges vu Verdon...">
     <link rel="canonical" href="https://escalade.hdaroit.fr/">
