improve title/desc SEO

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <meta name="apple-mobile-web-app-title" content="Hugo Da Roit" />
     <link rel="manifest" href="/img/icons/site.webmanifest" />
 
-    <title>Hugo Da Roit | Moniteur Escalade - De la Normandie aux Hautes-Alpes</title>
-    <meta name="description" content="Moniteur d'escalade DEJEPS basé dans les Hautes-Alpes. J'organise des stages pour les grimpeurs Normands et d'ailleurs. : Clécy, Les Andelys, La Fosse Arthour, Mortain, Presles, Gorges vu Verdon...">
+    <title>Hugo Da Roit | Moniteur Escalade : Normandie & Hautes-Alpes</title>
+    <meta name="description" content="Moniteur d'escalade. Stages falaise & grandes voies : Normandie (Clécy, Mortain, Andelys), Hautes-Alpes, Verdon, Calanques. Réservez votre sortie !">
+
     <link rel="canonical" href="https://escalade.hdaroit.fr/">
     <meta name="robots" content="index, follow">
 
